<resources>
    <string name="app_name">VI Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- REGISTRATION -->
    <string name="no_account">You don\'t have an account.</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="error_fill_in_all_of_the_fields">Fill in all of the fields</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_underlined"><u>Log in</u></string>
    <string name="sign_up_underlined"><u>Sign up</u></string>
    <string name="personal_information">Personal information</string>
    <string name="orders">Orders</string>
    <string name="log_out">Log out</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="name_colon">Name:</string>
    <string name="surname_colon">Surname:</string>
    <string name="country_colon">Country:</string>
    <string name="country">Country</string>
    <string name="town_colon">Town:</string>
    <string name="town">Town</string>
    <string name="address_colon">Address:</string>
    <string name="address">Address</string>
    <string name="confirm">Confirm</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="description_colon">Description:</string>
    <string name="delete_from_basket">Delete from basket</string>
    <string name="order">Order</string>
    <string name="total_colon">Total:</string>
    <string name="order_information">Order information</string>
    <string name="delivery_type_colon">Delivery type:</string>
    <string name="delivery_man">Delivery man</string>
    <string name="post_office">Post office</string>
    <string name="payment_colon">Payment:</string>
    <string name="credit_card">Credit card</string>
    <string name="cash">Cash</string>
    <string name="choose_category_colon">Choose category:</string>
    <string name="users">Users</string>
    <string name="empty">Empty</string>
    <string name="details">Details</string>
    <string name="order_id_colon">Order ID:</string>
    <string name="delivery_colon">Delivery:</string>
    <string name="x_mark">✕</string>
</resources>