<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_activity_gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/tv_log_in"
        style="@style/RegisterHeadingText"
        android:text="@string/log_in"
        android:layout_marginTop="230dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--USER DATA-->
    <EditText
        style="@style/RegisterEditText"
        android:id="@+id/et_log_in_email"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/after_heading_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_log_in"/>
    <EditText
        style="@style/RegisterEditText"
        android:id="@+id/et_log_in_password"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_log_in_email"/>

    <!--Error text-->
    <TextView
        android:id="@+id/tv_log_in_error_field"
        style="@style/ErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_log_in_password"/>

    <Button
        android:id="@+id/btn_log_in"
        style="@style/ClassicButton"
        android:layout_margin="80dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/log_in"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_log_in_password" />


    <TextView
        android:id="@+id/tv_dont_have_a_account"
        style="@style/RegisterNormalText"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="50dp"
        android:text="@string/don_t_have_a_account"
        android:layout_marginBottom="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_sign_up"
        style="@style/RegisterNormalText"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_up_underlined"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="@dimen/large_margin"
        app:layout_constraintStart_toEndOf="@+id/tv_dont_have_a_account"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>