<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <TextView
        style="@style/HeadingText"
        android:id="@+id/tv_user_fullname"
        tools:text="Victoria Chernega"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/NormalText"
        android:id="@+id/tv_user_email"
        tools:text="vi.chernega@gmail.com"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_fullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <!--PERSONAL INFO ELEMENT-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/personal_information_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_container_height"
        android:layout_marginTop="@dimen/after_heading_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_fullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/icon_personal_info"
            style="@style/IconSmall"
            android:src="@drawable/ic_bnb_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            style="@style/NormalTextInContainer"
            android:text="@string/personal_information"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_personal_info"/>

        <View
            style="@style/Separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--ORDERS ELEMENT-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orders_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_container_height"
        app:layout_constraintTop_toBottomOf="@+id/personal_information_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/icon_orders"
            style="@style/IconSmall"
            android:src="@drawable/ic_bnb_basket"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            style="@style/NormalTextInContainer"
            android:text="@string/orders"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_orders"/>

        <View
            style="@style/Separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- LOG OUT ELEMENT-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logout_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_container_height"
        app:layout_constraintTop_toBottomOf="@+id/orders_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/icon_logout"
            style="@style/IconSmall"
            android:src="@drawable/ic_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            style="@style/NormalTextInContainer"
            android:layout_marginStart="12dp"
            android:text="@string/log_out"

            app:layout_constraintStart_toEndOf="@+id/icon_logout"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            style="@style/Separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>